# evidence-gated-scientific-agent

./: .dockerignore  .env.example  .gitignore  .konsta-project-id  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.local.yaml  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
browser/: Dockerfile  entrypoint.sh  nginx.conf  policies.json  squid.conf
deploy/: README.md  evidence-bench-compose.service.example  evidence-bench-qwen-tunnel.service.example  provision_env.py
docs/: A2A_ECOSYSTEM_SUBMISSION.md  DELEGATE_INTEGRATION.md  LITERATURE_ACQUISITION.md  LOCAL_SETUP.md  MVP_SCOPE.md  REPORTING_STANDARD.md  THREAT_MODEL.md  UPSTREAM_LESSONS.md  WEB_AND_A2A.md  index.html  knowledge-grounding.md  llms.txt  robots.txt  sitemap.xml
docs/assets/: site.css
evals/: README.md  knowledge_retrieval_benchmark.py  run_a2a_live_gate.py  run_deployed_eval.py
evals/cases/: cases.json  corrupted_effect.csv  knowledge_retrieval.json  known_effect.csv
evals/results/: v0.4.0-a2a-live.json  v0.4.0-inferential-critic-stress-pre-fix.json  v0.4.0-knowledge-grounding.json  v0.4.0-known-effect-fresh-pre-visual-gate.json  v0.4.0-known-effect-pre-narrative-gate.json  v0.4.0-known-effect.json  v0.4.0-manuscript-stress-pre-fix.json  v0.4.0-pubmed-fulltext.json  v0.4.1-known-effect-pre-assumption-reassurance-gate.json  v0.4.1-known-effect-pre-category-gate.json  v0.4.1-known-effect-pre-critic-normalization.json  v0.4.1-known-effect-pre-effect-axis-contract.json  v0.4.1-known-effect-pre-json-audit-and-display-contracts.json  v0.4.1-known-effect-pre-keyword-coordinate-transposition-gates.json  v0.4.1-known-effect-pre-layout-and-reader-table-output-gates.json  v0.4.1-known-effect-pre-monotonic-critic-gate.json  v0.4.1-known-effect-pre-negation-aware-arm-mapping-gate.json  v0.4.1-known-effect-pre-plan-convergence.json  v0.4.1-known-effect-pre-static-bound-and-assigned-zero-gates.json  v0.4.1-known-effect-pre-static-dataflow-and-uniformity-gates.json  v0.4.1-known-effect-pre-structural-report-grounding-gates.json  v0.4.1-known-effect-pre-transposition-gate.json
integrations/a2a/: README.md  a2a_client.py
scientific_agent/: __init__.py  cli.py  config.py  discussion.py  environment.py  environment_worker.py  execution.py  input_inspection.py  knowledge.py  knowledge_indexing.py  knowledge_visuals.py  linting.py  literature.py  mcp.py  models.py  orchestrator.py  policy.py  preflight.py  prompts.py  provenance.py  reporting.py  results_workbook.py  runtime.py  sandbox_worker.py  schemas.py  structured_client.py  visibility.py  workflow.py  workspace_tools.py
scientific_agent/web/: __init__.py  a2a.py  app.py  integrations.py  model_status.py  service.py  settings.py  store.py
scientific_agent/web/static/: app.css  app.js  index.html
scripts/: container_boundary_smoke.sh  local_run.sh  local_setup.sh
skills/evidence-bench/: SKILL.md
skills/evidence-bench/agents/: openai.yaml
skills/evidence-bench/scripts/: evidence_bench.py
tests/: container_sandbox_smoke.py  test_a2a_live_gate.py  test_cli_privacy.py  test_config.py  test_deployed_eval.py  test_discussion.py  test_environment.py  test_evidence_bench_skill.py  test_execution.py  test_input_inspection.py  test_integration_downloads.py  test_knowledge.py  test_knowledge_benchmark.py  test_knowledge_indexing.py  test_linting.py  test_literature.py  test_live.py  test_local_setup.py  test_managed_browser.py  test_model_status.py  test_policy.py  test_prompts.py  test_provenance.py  test_provision_env.py  test_release_assets.py  test_reporting.py  test_runtime.py  test_sandbox_worker.py  test_schemas.py  test_structured_client.py  test_visibility.py  test_web_api.py  test_web_store.py  test_workflow.py  test_workspace_tools.py
tests/fixtures/: group_values.csv
